# benson-sound

./: .gitignore  Benson_sound.cbp  CMakeLists.txt  LICENSE  README.md  SDLTest1.vcxproj  SDLTest1.vcxproj.filters
.github/workflows/: build.yml
doc/: BensonAlgorithm.txt
src/: BensonSound.cpp  BensonSound.h  GLRGB.h  OperatingSystem.cpp  OperatingSystem.h  SDLSound.cpp  SDLSound.h  SDLStuff.cpp  SDLStuff.h  Sound.cpp  Util.cpp  Util.h  mixer3.cpp
util/: ci-clang.sh  ci-gcc.sh  ci-mingw.sh
